--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "cssnano": "4.1.10",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
+    "enzyme-to-json": "3.4.4",
     "eslint": "6.6.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-react": "7.16.0",
@@ -119,7 +120,8 @@
     "setupFiles": [
       "raf/polyfill",
       "./tools/enzymeTestAdapterSetup.js"
-    ]
+    ],
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   },
   "babel": {
     "env": {
