--- a/package.json
+++ b/package.json
@@ -121,7 +121,9 @@
       "raf/polyfill",
       "./tools/enzymeTestAdapterSetup.js"
     ],
-    "snapshotSerializers": ["enzyme-to-json/serializer"]
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "babel": {
     "env": {
